# -

./: .dockerignore  .gitignore  Dockerfile  MultiVideoDL.spec  QUICKSTART.Docker.md  README.Docker.md  README.md  _check_models_encoding.py  _debug_models.py  _debug_models_bytes.py  _debug_models_progress.py  _fix_models_downloadcontext_fields.py  _patch_models_downloadcontext_quality.py  _patch_models_quality.py  _rewrite_dc_ascii.py  _rewrite_dc_ascii_safe.py  _rewrite_models_downloadcontext.py  build_gui_exe.ps1  docker-compose.yml  docker-test.ps1  docker-test.sh  install_ffmpeg.ps1  install_ffmpeg_simple.ps1  pyproject.toml  run_gui_entry.py  start_mvd.bat  urls.example.txt
examples/: gui_legacy.py
src/multi_video_dl/: __init__.py  cli.py  gui.py
src/multi_video_dl/browser/: __init__.py  login_capture.py  playwright_sniffer.py
src/multi_video_dl/core/: downloaders.py  errors.py  models.py  pipeline.py  selector.py  store.py  utils.py
src/multi_video_dl/extractors/: __init__.py  base.py  bilibili.py  douyin.py  xhs.py
src/multi_video_dl/tools/: bilibili_id_resolver.py  bilibili_playlist_tools.py  bilibili_playlist_utils.py
tests/: test_pipeline_integration.py  test_selector.py  test_template.py
tools/: cookie_fetcher.py
